Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- store all map names lowercase, otherwise many maps are reported as
  not installed
- #define ZEXPORT if not already defined to fix compilation problems. Thanks
  Pierre Pronchery

Mar 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- game types for westernq3

Feb 19, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Feb 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- adapt configure.in to install French translation

Feb 08, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Added French translation

Feb 04, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move server filter submenu to top level
- remove rarely used buttons from toolbar

Feb 03, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- merge patch from Jochen Baier to allow filtering for map and server name
- update German translation

Feb 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix high cpu load when dialogs are shown during launch phase. It's
  obviously no good idea to enter the gtk event loop from inside a
  gdk input callback.

Jan 20, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- image loading through gdk-pixbuf (png, jpeg etc.)
- splash screen, logo in $datadir/xqf/pixmaps/xqflogo.png

Jan 03, 2002: Jordi Mallach <jordi@sindominio.net>
- New Danish translation, from Morten Brix Pedersen.

Dec 25, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added button to scan for maps without restarting xqf
- fixed some minor memleaks
- map scan function for q1, qw, q2 and hl

Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11.1

Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version back to to 0.9.11 for release with fixes below

Dec 19, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- properly quoted macros for zlib checks
- changed configure argument because help text said --enable-externalrcon while
  it actually was --enable-readline.